arrows dont show in small screens

--- a/app/src/homepage/homepage.template.html
+++ b/app/src/homepage/homepage.template.html
@@ -8,12 +8,12 @@
                 event-id="{{movie.event_id}}" image-url="{{movie.image_url}}" date="{{$ctrl.today}}"
                 show-top-left="false" place="NONE" city="{{$ctrl.filtersrv.filters.city}}" width = "16rem"></act-card>
         </div>
-        <md-button ng-click = "$ctrl.scroll_left('todays_movies')" class = "absolute md-fab" style = "top: 6rem; left: 1rem; background-color: rgba(50, 50, 50, 0.73); position: absolute">
+        <md-button ng-click = "$ctrl.scroll_left('todays_movies')" class = "absolute md-fab invisible xl:visible" style = "top: 6rem; left: 1rem; background-color: rgba(50, 50, 50, 0.73); position: absolute">
             <div><i class="absolute material-icons text-white mx-auto" 
                 style="font-size:36px; top: 50%; transform: translateY(-50%); right: 20%">keyboard_arrow_left</i>
             </div>
         </md-button>
-        <md-button ng-click = "$ctrl.scroll_right('todays_movies')" class = "absolute md-fab" style = "top: 6rem; right: 1rem; background-color: rgba(50, 50, 50, 0.73); position: absolute">
+        <md-button ng-click = "$ctrl.scroll_right('todays_movies')" class = "absolute md-fab invisible xl:visible" style = "top: 6rem; right: 1rem; background-color: rgba(50, 50, 50, 0.73); position: absolute">
             <div><i class="absolute material-icons text-white mx-auto" 
                 style="font-size:36px; top: 50%; transform: translateY(-50%); left: 20%">keyboard_arrow_right</i>
             </div>
