--- a/app/src/filter-segment/filter-segment.template.html
+++ b/app/src/filter-segment/filter-segment.template.html
@@ -26,6 +26,18 @@
                 <md-option value = "hopi" ng-selected = "$ctrl.selectedDiscount == 'hopi'">Hopi</md-option>
             </md-select>
         </md-input-container>
+        
+        <div class="flex flex-row py-1" ng-if = "!$ctrl.isSinema">
+            <md-checkbox name = "fiyat" ng-model = "$ctrl.isFiyat" aria-label = "checkbox-date-start"></md-checkbox>
+            <h4 class="px-1">Çıta fiyat belirle: </h4>
+        </div>
+        <md-radio-group ng-model="$ctrl.selectedPrice" ng-if = "!$ctrl.isSinema && $ctrl.isFiyat">
+            <md-radio-button value="NONE" ng-selected = "true">Farketmez</md-radio-button>
+            <md-radio-button value="20">20 TL </md-radio-button>
+            <md-radio-button value="50">50 TL</md-radio-button>
+            <md-radio-button value="100">100 TL</md-radio-button>
+      
+          </md-radio-group>
 
         <div ng-if = "$ctrl.isSinema">
             <md-input-container style = "width: 100%">
