fixed a bug in filter-segment, added toast message when copying the link

--- a/app/src/act-card/act-card.template.html
+++ b/app/src/act-card/act-card.template.html
@@ -19,7 +19,7 @@
         <a href="{{$ctrl.linkToDetails}}">
             <md-button class="md-button" ng-click="$ctrl.get_details($ctrl.eventId)">DETAY</md-button>
         </a>
-        <md-button class="md-icon-button h-1 w-1 self-center" ng-copy = "$ctrl.linkToDetails">
+        <md-button class="md-icon-button h-1 w-1 self-center" ng-copy = "$ctrl.linkToDetails" ng-click = "$ctrl.copyToClipboard($ctrl.linkToDetails); $ctrl.showToast()">
             <input ng-model="$ctrl.linkToDetails" ng-value = "$ctrl.linkToDetails" ng-show = "false">
             <i class="material-icons">share</i>
         </md-button>
